--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <h1>Beetroot <i>(Beta vulgaris)</i></h1>
 
     <nav>
-      <ul>
-        <li><a href="#common-varieties">Common varieties</a></li>
+      <ol>
+        <li><a href="common-varieties">Common varieties</a></li>
         <li><a href="nutritional-information">Nutritional information</a></li>
         <li><a href="tags">Tags</a></li>
-      </ul>
+      </ol>
     </nav>
   </header>
 
