--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Beets</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="css/main.css" rel="stylesheet">
 </head>
 
