--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <title>Beets</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&family=PT+Serif&family=Patua+One&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 
@@ -30,7 +29,7 @@
       <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
     </figure>
 
-    <p><time>55 days</time> to <time>65 days</time> are needed from germination to harvest of the root.</p>
+    <p>55 days to 65 days are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>”</q>.</p>
     <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.
